--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<datalist>
+test
+<option value="a">
+<option value="b">
+<option value="c">
+</datalist>
 </body>
 </html>
