--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<datalist>
-test
+<datalist id="abc">
 <option value="a">
 <option value="b">
 <option value="c">
 </datalist>
+<label>
+test
+<input list="abc">
 </body>
 </html>
