--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 test
 <br>
 <input list="abc">
+</input>
+<br>
+<label> A very cool slider 
+<br>
+<input type="range" min="0 "max="10" value="5">
+</label>
+
 </body>
 </html>
