--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ test
 <br>
 <label> A very cool slider 
 <br>
-<input type="range" min="0 "max="10" value="5">
+<input type="range" min="1" "max="10" value="5">
 </label>
 
 </body>
