--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+background-color: LightCyan;
+}
+</style>
+</head>
 <body>
 <datalist id="abc">
 <option value="a">
