--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 <head>
 <style>
 body {
-background-color: LightCyan;
+background-color: Grey;
+}
+p {
+  color: White; font-size: 15px; font-family: sans-serif;
+}
+h1 {
+  color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
+}
+h2 {
+  color: White; font-family: sans-serif; font-weight: lighter;
+}
+h3 {
+  color: White; font-family: sans-serif; font-weight: lighter;
 }
 </style>
 </head>
-<body>
-<datalist id="abc">
-<option value="a">
-<option value="b">
-<option value="c">
-</datalist>
-<label>
-test
-</label>
-<br>
-<input list="abc">
-</input>
-<br>
-<label> A very cool slider 
-<br>
-<input type="range" min="1" "max="10" value="5">
-</label>
-
+<h1>WhiskersLD's Website</h1>
+<h2>Files<h2>
+<p>Music</p>
 </body>
 </html>
