--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@ h2 {
 h3 {
   color: White; font-family: sans-serif; font-weight: lighter;
 }
+ul {
+  color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
+}
 </style>
 </head>
 <h1>WhiskersLD's Website</h1>
 <h2>Files<h2>
-<p>Music</p>
+<ul>
+  <li>Music</li>
+  <li>Photos</li>
 </body>
 </html>
