--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>WhiskersLD</title>
 <style>
 body {
 background-color: Grey;
@@ -27,5 +28,6 @@ ul {
 <ul>
   <li>Music</li>
   <li>Photos</li>
+  <li>Roms</li>
 </body>
 </html>
