--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@ h3 {
 ul {
   color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
 }
+a { color: White;
+}
 </style>
 </head>
 <h1>WhiskersLD's Website</h1>
 <h2>Files<h2>
 <ul>
-  <li>Music</li>
+  <li><a href="whiskersld.github.io/Music/music.html">Music</a></li>
   <li>Photos</li>
   <li>Roms</li>
 </body>
