--- a/Music/music.html
+++ b/Music/music.html
@@ -20,6 +20,8 @@ h3 {
 ul {
   color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
 }
+a { color: White;
+}
 </style>
 </head>
 <h1>Music</h1>
