--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@ ul {
 }
 a { color: White;
 }
+div {
+  margin: auto;
+   width: 50%;
+}
 </style>
 </head>
+<div id="Intro">
 <h1>WhiskersLD's Website</h1>
 <h2>Files<h2>
+</div>
+<div id="Links">
 <ul>
   <li><a href="whiskersld.github.io/Music/music.html">Music</a></li>
   <li>Photos</li>
   <li>Roms</li>
+</div>
 </body>
 </html>
