--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@ a { color: White;
 }
 div {
   margin: auto;
-   width: 50%;
+  width: 50%;
 }
 </style>
 </head>
 <div id="Intro">
 <h1>WhiskersLD's Website</h1>
 <h2>Files<h2>
-</div>
+</div id="Intro">
 <div id="Links">
 <ul>
   <li><a href="whiskersld.github.io/Music/music.html">Music</a></li>
   <li>Photos</li>
   <li>Roms</li>
-</div>
+</div id="Links">
 </body>
 </html>
