--- a/Music/music.html
+++ b/Music/music.html
@@ -30,7 +30,7 @@ div {
 <h1>Music</h1>
 <h2>Bands<h2>
 <ul>
-  <li>The Brobecks</li>
+  <li><a href="whiskersld.github.io/Music/TheBrobecks/brobecks.html">The Brobecks</a></li>
   <li>Twenty One Pilots</li>
 </body>
 </html>
