--- a/Music/music.html
+++ b/Music/music.html
@@ -28,10 +28,12 @@ div {
 }
 </style>
 </head>
+<div>
 <h1>Music</h1>
 <h2>Bands<h2>
 <ul>
   <li><a href="whiskersld.github.io/Music/TheBrobecks/brobecks.html">The Brobecks</a></li>
   <li>Twenty One Pilots</li>
+</div>
 </body>
 </html>
