--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -27,11 +27,13 @@ div {
   width: 50%;
 </style>
 </head>
+<div>
 <h1>The Brobecks</h1>
 <h2>Albums and EP's<h2>
 <ul>
   <li>Understanding The Brobecks</li>
   <li>Happiest Nuclear Winter</li>
   <li>Goodnight and Have A Pleasant Tomorrow</li>
+</div>
 </body>
 </html>
