--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -33,7 +33,7 @@ div {
 <ul>
   <li>Understanding The Brobecks</li>
   <li>Happiest Nuclear Winter</li>
-  <li>Goodnight and Have A Pleasant Tomorrow</li>
+  <li><a href="whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html">Goodnight And Have A Pleasant Tomorrow</a></li>
 </div>
 </body>
 </html>
