--- a/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
+++ b/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
@@ -31,7 +31,7 @@ div {
 <h1>The Brobecks</h1>
 <h2>Goodnight and Have A Pleasant Tomorrow<h2>
 <ul>
-  <li><a href="whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/BikeRide.mp3">Bike Ride </a></li>
+  <li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/BikeRide.mp3">Bike Ride </a></li>
 <br />
   <li>West of California</li>
 <br />
