--- a/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
+++ b/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
@@ -25,6 +25,10 @@ a { color: White;
 div {
   margin: auto;
   width: 50%;
+}
+i {
+  font-size: 12px; font-family: sans-serif; font-weight: lighter;
+}
 </style>
 </head>
 <div>
@@ -54,6 +58,9 @@ div {
   <li>Sleeping Pills</li>
 <br />
   <li>Heartbreak or Death</li>
+</ul>
+<br>
+<i>Thanks to the people on the iDKHOW discord server for archiving all these songs</i>
 </div>
 </body>
 </html>
