--- a/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
+++ b/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
@@ -17,8 +17,8 @@ h2 {
 h3 {
   color: White; font-family: sans-serif; font-weight: lighter;
 }
-ul {
-  color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
+ol {
+  color: White; font-family: sans-serif; font-size: 20px; font-weight: lighter;
 }
 a { color: White;
 }
@@ -34,7 +34,7 @@ i {
 <div>
 <h1>The Brobecks</h1>
 <h2>Goodnight and Have A Pleasant Tomorrow<h2>
-<ul>
+<ol start="1">
   <li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/BikeRide.mp3">Bike Ride </a></li>
 <br />
   <li>West of California</li>
@@ -58,7 +58,7 @@ i {
   <li>Sleeping Pills</li>
 <br />
   <li>Heartbreak or Death</li>
-</ul>
+</ol>
 <br>
 <i>Thanks to the people on the iDKHOW discord server for archiving all these songs</i>
 </div>
