--- a/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
+++ b/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
@@ -12,7 +12,7 @@ h1 {
   color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
 }
 h2 {
-  color: White; font-family: sans-serif; font-weight: lighter;
+  color: White; font-family: sans-serif; font-weight: lighter; font-size: 25px
 }
 h3 {
   color: White; font-family: sans-serif; font-weight: lighter;
@@ -29,6 +29,8 @@ div {
 i {
   font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
+a:hover {
+  color: LightCyan;
 </style>
 </head>
 <div>
