--- a/Music/music.html
+++ b/Music/music.html
@@ -12,7 +12,7 @@ h1 {
   color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
 }
 h2 {
-  color: White; font-family: sans-serif; font-weight: lighter;
+  color: White; font-family: sans-serif; font-weight: lighter; font-size: 25px
 }
 h3 {
   color: White; font-family: sans-serif; font-weight: lighter;
@@ -25,6 +25,9 @@ a { color: White;
 div {
   margin: auto;
   width: 50%;
+}
+i {
+  font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
 </style>
 </head>
