--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ h1 {
   color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
 }
 h2 {
-  color: White; font-family: sans-serif; font-weight: lighter;
+  color: White; font-family: sans-serif; font-weight: lighter; font-size: 25px
 }
 h3 {
   color: White; font-family: sans-serif; font-weight: lighter;
@@ -26,6 +26,9 @@ a { color: White;
 div {
   margin: auto;
   width: 50%;
+}
+i {
+  font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
 </style>
 </head>
