--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -20,24 +20,32 @@ h3 {
 ul {
   color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
 }
-a { color: White;
+a {
+  color: White;
 }
-div {
+#main {
   margin: auto;
   width: 50%;
 }
 i {
   font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
+.Home {
+  font-size: 2px
+}
 </style>
 </head>
-<div>
+<div id="main">
 <h1>The Brobecks</h1>
 <h2>Albums and EP's<h2>
 <ul>
   <li>Understanding The Brobecks</li>
   <li>Happiest Nuclear Winter</li>
   <li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html">Goodnight And Have A Pleasant Tomorrow</a></li>
+</ul>
+</div id="main">
+<div id="side"
+<p id="Home"><a href="whiskersld.github.io">home</a></p>
 </div>
 </body>
 </html>
