--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -30,22 +30,23 @@ a {
 i {
   font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
-.Home {
-  font-size: 2px
+a.Home {
+  font-size: 2px; font-family: sans-serif; font-weight: lighter;
 }
+#side {font-size: 15px; font-family: sans-serif; font-weight: lighter;}
 </style>
 </head>
+<div id="side"
+<p id="Home"><a href="whiskersld.github.io">home</a></p id="Home">
+</div>
 <div id="main">
 <h1>The Brobecks</h1>
 <h2>Albums and EP's<h2>
 <ul>
   <li>Understanding The Brobecks</li>
   <li>Happiest Nuclear Winter</li>
-  <li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html">Goodnight And Have A Pleasant Tomorrow</a></li>
+<a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html">Goodnight And Have A Pleasant Tomorrow</a></li>
 </ul>
 </div id="main">
-<div id="side"
-<p id="Home"><a href="whiskersld.github.io">home</a></p>
-</div>
 </body>
 </html>
