--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -30,14 +30,17 @@ a {
 i {
   font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
-a.Home {
-  font-size: 2px; font-family: sans-serif; font-weight: lighter;
+
+#side {
+margin-left: auto;
 }
-#side {font-size: 15px; font-family: sans-serif; font-weight: lighter;}
+#sidetext {
+font-size: 15px; font-family: sans-serif;
+}
 </style>
 </head>
-<div id="side"
-<p id="Home"><a href="whiskersld.github.io">home</a></p id="Home">
+<div id="side">
+<p id="home"><a href="whiskersld.github.io">home</a></p id="Home">
 </div>
 <div id="main">
 <h1>The Brobecks</h1>
