--- a/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
+++ b/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
@@ -35,7 +35,7 @@ a:hover {
 </head>
 <div>
 <h1>The Brobecks</h1>
-<h2>Goodnight and Have A Pleasant Tomorrow<h2>
+<h2>Goodnight, and Have A Pleasant Tomorrow<h2>
 <ol start="1">
   <li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/BikeRide.mp3">Bike Ride </a></li>
 <br />
