--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -2,53 +2,55 @@
 <head>
 <title>The Brobecks</title>
 <style>
+
 body {
-background-color: Grey;
+  background-color: grey;
 }
-p {
-  color: White; font-size: 15px; font-family: sans-serif;
-}
-h1 {
-  color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
-}
-h2 {
-  color: White; font-family: sans-serif; font-weight: lighter; font-size: 25px
-}
-h3 {
-  color: White; font-family: sans-serif; font-weight: lighter;
-}
-ul {
-  color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
-}
+
 a {
-  color: White;
+color: White;
 }
+
 #main {
-  margin: auto;
-  width: 50%;
-}
-i {
-  font-size: 12px; font-family: sans-serif; font-weight: lighter;
+margin: auto; width: 250px; height: 100%; background-color: Grey;
 }
 
 #side {
-margin-left: auto;
+margin-right: auto; height: 100%; width: 100px; background-color: #363636; position: fixed; border-style: solid; border-color: #212121;
 }
-#sidetext {
-font-size: 15px; font-family: sans-serif;
+#sidep {
+font-size: 15px; font-family: sans-serif; font-weight: lighter;
 }
+#mainh1 {
+color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
+}
+
+#mainh2 {
+color: White; font-family: sans-serif; font-weight: lighter; font-size: 25px;
+}
+
+#mainp {
+color: White; font-size: 15px; font-family: sans-serif;
+}
+
+#mainul {
+color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
+}
+
 </style>
 </head>
+
 <div id="side">
-<p id="home"><a href="whiskersld.github.io">home</a></p id="Home">
+<p id="sidep"><a href="whiskersld.github.io">Back To Home</a></p id="Home">
 </div>
+
 <div id="main">
-<h1>The Brobecks</h1>
-<h2>Albums and EP's<h2>
-<ul>
+<h1 id="mainh1">The Brobecks</h1>
+<h2 id="mainh2">Albums and EP's<h2>
+<ul id="mainul">
   <li>Understanding The Brobecks</li>
   <li>Happiest Nuclear Winter</li>
-<a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html">Goodnight And Have A Pleasant Tomorrow</a></li>
+<li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html">Goodnight, And Have A Pleasant Tomorrow</a></li>
 </ul>
 </div id="main">
 </body>
