--- a/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
+++ b/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/goodnightandhaveapleasanttomorrow.html
@@ -29,8 +29,7 @@ div {
 i {
   font-size: 12px; font-family: sans-serif; font-weight: lighter;
 }
-a:hover {
-  color: LightCyan;
+
 </style>
 </head>
 <div>
@@ -41,11 +40,11 @@ a:hover {
 <br />
   <li>West of California</li>
 <br />
-  <li>Goodnight Socialite</li>
+  <li>Goodnight, Socialite</li>
 <br />
   <li>Jacqui</li>
 <br />
-  <li>Le Velo Pour Deux</li>
+  <li><a href="https://whiskersld.github.io/Music/TheBrobecks/goodnightandhaveapleasanttomorrow/LeVeloPourDeux.mp3 ">Le Velo Pour Deux</a></li>
 <br />
   <li>You or A Ghost</li>
 <br />
