--- a/Music/TheBrobecks/brobecks.html
+++ b/Music/TheBrobecks/brobecks.html
@@ -16,7 +16,7 @@ margin: auto; width: 250px; height: 100%; background-color: Grey;
 }
 
 #side {
-margin-right: auto; height: 100%; width: 100px; background-color: #363636; position: fixed; border-style: solid; border-color: #212121;
+margin-right: auto; height: 100%; width: 100px; background-color: #363636; position: fixed; border-style: solid; 
 }
 #sidep {
 font-size: 15px; font-family: sans-serif; font-weight: lighter;
