--- a/index.html
+++ b/index.html
@@ -3,49 +3,10 @@
 <head>
 <title>WhiskersLD</title>
 <style>
+
 body {
-background-color: Grey;
-}
-p {
-  color: White; font-size: 15px; font-family: sans-serif;
-}
-h1 {
-  color: White; font-size: 40px; font-family: sans-serif; font-weight: lighter;
-}
-h2 {
-  color: White; font-family: sans-serif; font-weight: lighter; font-size: 25px
-}
-h3 {
-  color: White; font-family: sans-serif; font-weight: lighter;
-}
-ul {
-  color: White; font-family: sans-serif; font-size: 15px; font-weight: lighter;
-}
-a { color: White;
-}
-div {
-  margin: auto;
-  width: 50%;
-}
-i {
-  font-size: 12px; font-family: sans-serif; font-weight: lighter;
+background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
 }
 </style>
 </head>
-<div id="Intro">
-<h1>WhiskersLD's Website</h1>
-<h2>Files<h2>
-</div id="Intro">
-<div id="Links">
-<ul>
-  <li><a href="whiskersld.github.io/Music/music.html">Music</a></li>
-  <li>Photos</li>
-  <li>Roms</li>
-</div id="Links">
-<!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={comments_header:'Guestbook'};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1583039988260");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end www.htmlcommentbox.com -->
-</body>
-</html>
+<html>
