--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 body {
 background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
 }
+#navigationbar {
+  background-color: Green;
+  
+}
 </style>
 </head>
 <html>
+<div id="navigationbar">
+  <p>Hello There!</p>
+</div>
