--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 body {
 background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
 }
-#navigationbar {
+.navigationbar {
   background-color: Green;
-  
+  height: 50px;
+
 }
 </style>
 </head>
