--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 body {
 background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
 }
-#navigationbar {
+.navigationbar {
   background-color: Green;
   height: 500px;
 
