--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif
 }
 .navigationbar {
   background-color: Green;
-  height: 500px;
-
+  position: fixed;
 }
 </style>
 </head>
