--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
 background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
 }
 .navigationbar {
-  background-color: Green;
+  background-color: white;
   position: fixed;
 }
 </style>
