--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WhiskersLD</title>
+<title>MY S1T3!11!!</title>
 <style>
 
 body {
@@ -9,7 +9,7 @@ background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif
 }
 .navigationbar {
   background-color: white;
-  
+
 }
 </style>
 </head>
