--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ body {
 background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
 }
 .navigationbar {
-
+  overflow: hidden;
+  background-color: #333;
 }
 </style>
 </head>
