--- a/index.html
+++ b/index.html
@@ -5,15 +5,44 @@
 <style>
 
 body {
-background-image: url(https://media.giphy.com/media/QvwkxMePMCTMgpAjZn/giphy.gif);
+background-image: url(https://i.imgur.com/JkFquBD.gif);
+margin: 0;
 }
-.navigationbar {
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-image: linear-gradient(90deg,red, orange, yellow, green, blue);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#maintext {
+color: Lime;
 }
 </style>
 </head>
 <html>
-<div id="navigationbar">
-  <p>Hello There!</p>
-</div>
+
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
+<div id="maintext">
+  <p>hellooo there!!! im whiskerS & im stuc in 2008 sc3n3 kultur<p>
+</div id="maintext">
