--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ ul {
   padding: 0;
   overflow: hidden;
   background-image: linear-gradient(90deg,red, orange, yellow, green, blue);
+  border-radius: 30px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 li {
@@ -29,9 +33,15 @@ li a {
   text-decoration: none;
 }
 
-#maintext {
-color: Lime;
-text-align: left;
+
+#construction {
+ float: right;
+
+}
+
+#header{
+  color: Blue;
+  text-align: center;
 }
 </style>
 </head>
@@ -43,7 +53,8 @@ text-align: left;
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
-
-<div id="maintext">
-  <p>hellooo there!!! im whiskerS & im stuc in 2008 sc3n3 kultur<p>
-</div id="maintext">
+<br>
+<br>
+<h1 id="header">HELLO</h1>
+<br>
+<img id="construction" src= "https://i.imgur.com/LbagfyD.gif">
