--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ li a {
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="commentbox.html">Guestbook</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
