--- a/commentbox.html
+++ b/commentbox.html
@@ -50,8 +50,8 @@ margin:auto;
 <html>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="commentbox.html">Guestbook</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
