--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ li a {
 <html>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
   <li><a href="commentbox.html">Guestbook</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
