--- a/commentbox.html
+++ b/commentbox.html
@@ -41,9 +41,11 @@ li a {
 }
 
 #HCB_comment_box {
-background-color:pink;
+background-image: url(https://i.imgur.com/eaR3qr8.gif);
 width: 50%;
 margin:auto;
+color:white;
+text-shadow: 2px 2px 2px Black;
 }
 </style>
 </head>
