--- a/commentbox.html
+++ b/commentbox.html
@@ -5,7 +5,7 @@
 <style>
 
 body {
-background-image: image(mainbackground.gif);
+background-image: url(mainbackground.gif);
 margin: 0;
 }
 
@@ -41,7 +41,7 @@ li a {
 }
 
 #HCB_comment_box {
-background-image: image(commentboxbackground.gif);
+background-image: url(commentboxbackground.gif);
 width: 50%;
 margin:auto;
 color:white;
