--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ ul {
   overflow: hidden;
   background-image: linear-gradient(90deg,red, orange, yellow, green, blue);
   border-radius: 30px;
+  border-width:5px;
+  border-style:ridge;
+  border-color: #7b03fc;
   position: fixed;
   top: 0;
   width: 100%;
