--- a/commentbox.html
+++ b/commentbox.html
@@ -44,12 +44,15 @@ li a {
 }
 
 #HCB_comment_box {
-background-image: url(commentboxbackground.gif);
-width: 50%;
-margin:auto;
-color:white;
-text-shadow: 2px 2px 2px Black;
+ background-image: url(commentboxbackground.gif);
+ width: 30%;
+ margin:auto;
+ color:white;
+ text-shadow: 2px 2px 2px Black;
+ border-radius: 20px;
+ text-align: center;
 }
+
 </style>
 </head>
 <html>
