--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 
 body {
-background-image: url(https://i.imgur.com/JkFquBD.gif);
+background-image: url(mainbackground.gif);
 margin: 0;
 }
 
@@ -60,4 +60,4 @@ li a {
 <br>
 <h1 id="header">HELLO</h1>
 <br>
-<img id="construction" src= "https://i.imgur.com/LbagfyD.gif">
+<img id="construction" src= "underconstructionsign.gif">
