--- a/jake gs files/jakeg.html
+++ b/jake gs files/jakeg.html
@@ -5,7 +5,7 @@
 <style>
 
 body {
-background-color: lightblue;
+background-image: url(dirtbackground.jpg);
 margin: 0;
 }
 
@@ -35,12 +35,13 @@ li a {
 
 
 #albumoutnow {
- background-color: grey;
+ background-image: url(obsidianbackground.jpeg);
  width: 30%;
  float: left;
  height: 600px;
  text-align: center;
  position:absolute;
+ color:white;
 }
 
 #ilovemc {
@@ -103,6 +104,9 @@ li a {
   }
 }
 
+#newestsong {
+  float: right;
+}
 
 </style>
 </head>
@@ -125,9 +129,20 @@ li a {
 <div id="albumoutnow">
  <br>
  <img id="ilovemc" src= "ilovemc.jpg" height="300" width="300">
- <p>I LOVE MINECRAFT IS OUT NOW!</p>
+ <h3>I LOVE MINECRAFT IS OUT NOW!</h3>
  <p>YOU CAN STREAM IT ON</p>
  <br>
+
+ <a href="https://open.spotify.com/album/468aL1VccMgafVldWn3nJ2?si=LptwomutS8qRFUIf7uLA9A">
  <img id="spotifylogo" src= "spotify.png" height="50" width="50">
+ </a>
+
+ <a href="https://www.youtube.com/watch?v=o35uLDXWXVE&list=PLk4x2j_20nxnnD14G1y6CfSnvzmuh0BBW">
  <img id="youtubelogo" src= "youtube.png" height="50" width="70">
+ </a>
+</div>
+
+<div id="newestsong">
+  <h3>Listen to Jake's newest song, Gucci Armor (feat. Yung Titty)!<h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ScNBjaUeN4o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
