--- a/jake gs files/jakeg.html
+++ b/jake gs files/jakeg.html
@@ -14,7 +14,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: pink;
+  background-image: url(portalbackground.gif);
   border-color: #7b03fc;
   position: fixed;
   top: 0;
@@ -106,6 +106,11 @@ li a {
 
 #newestsong {
   float: right;
+  background-image: url(obsidianbackground.jpeg);
+  width: 30%;
+  color:white;
+  text-align: center;
+  height: 400px;
 }
 
 </style>
@@ -114,7 +119,6 @@ li a {
 
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="commentbox.html">Music</a></li>
   <li><a href="#contact">About The Artist</a></li>
   <li><a href="#about">Contact</a></li>
 </ul>
@@ -143,6 +147,6 @@ li a {
 </div>
 
 <div id="newestsong">
-  <h3>Listen to Jake's newest song, Gucci Armor (feat. Yung Titty)!<h3>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ScNBjaUeN4o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h4>Listen to Jake's newest song, Gucci Armor (feat. Yung Titty)!<h4>
+  <iframe width="80%" height="250" src="https://www.youtube.com/embed/ScNBjaUeN4o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
