--- a/jake gs files/jakeg.html
+++ b/jake gs files/jakeg.html
@@ -4,9 +4,15 @@
 <title>Jake G</title>
 <style>
 
+@font-face {
+  font-family: minecraftfont;
+  src: url(Minecraft.ttf);
+}
+
 body {
 background-image: url(dirtbackground.jpg);
 margin: 0;
+font-family: minecraftfont;
 }
 
 ul {
@@ -54,7 +60,7 @@ li a {
 }
 
 #header{
- color: Blue;
+ color: lightblue;
  text-align: center;
 }
 
@@ -92,8 +98,6 @@ li a {
    max-width: 20%;
   }
 
-
-
   #youtubelogo {
    position: absolute;
    bottom:2%;
@@ -119,7 +123,7 @@ li a {
 
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="#contact">About The Artist</a></li>
+  <li><a href="#contact">About Jake G</a></li>
   <li><a href="#about">Contact</a></li>
 </ul>
 
