--- a/jake gs files/index.html
+++ b/jake gs files/index.html
@@ -74,7 +74,7 @@ li a:hover {
  left: 10%;
  height: auto;
  width: auto;
- max-width: 8%;
+ max-width: 15%;
 }
 
 
@@ -85,12 +85,22 @@ li a:hover {
  left: 70%;
  height: auto;
  width: auto;
- max-width: 8%;
+ max-width: 15%;
 }
 
 @media screen and (max-width: 1000px) {
   #albumoutnow{
    height: 415px;
+ }
+
+  #spotifylogo {
+  max-width: 5%;
+ }
+
+ #youtubelogo {
+ max-width: 5%;
+}
+
   }
 
   #spotifylogo {
@@ -99,7 +109,7 @@ li a:hover {
    left: 10%;
    height: auto;
    width: auto;
-   max-width: 20%;
+   max-width: 15%;
   }
 
   #youtubelogo {
