--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MY S1T3!11!!</title>
+<title>WhiskersLD</title>
 <style>
 
 body {
@@ -14,14 +14,12 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-image: linear-gradient(90deg,red, orange, yellow, green, blue);
-  border-radius: 30px;
-  border-width:5px;
-  border-style:ridge;
-  border-color: #7b03fc;
+  background-image: linear-gradient(90deg,black, white);
+  border-radius: 5px;
   position: fixed;
   top: 0;
   width: 100%;
+  font-family: sans-serif;
 }
 
 li {
@@ -45,6 +43,7 @@ li a {
 #header{
   color: Blue;
   text-align: center;
+  font-family: sans-serif;
 }
 </style>
 </head>
@@ -58,6 +57,5 @@ li a {
 </ul>
 <br>
 <br>
-<h1 id="header">HELLO</h1>
+<h1 id="header">WhiskersLD's Blog</h1>
 <br>
-<img id="construction" src= "underconstructionsign.gif">
