--- a/index.html
+++ b/index.html
@@ -1,61 +1,51 @@
-<!DOCTYPE html>
 <html>
-<head>
-<title>WhiskersLD</title>
-<style>
+  <head>
+      <title>T3LL3X'S BL0G</title>
+        <style>
 
-body {
-background-image: url(mainbackground.gif);
-margin: 0;
-}
+        @font-face {
+          font-family:coolfont;
+          src: url(Paschitnow_Sans.ttf);
+        }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-image: linear-gradient(90deg,black, white);
-  border-radius: 5px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  font-family: sans-serif;
-}
+        body {
+          background-image: url(checkers.jpg);
+          background-repeat: repeat-y;
+        }
 
-li {
-  float: left;
-}
+        #textdateheader {
+          font-family:coolfont;
+          text-align: center;
+          color:red;
+          text-shadow: 3px 4px blue;
+        }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+        #textblog {
+          text-align: center;
+          color:red;
+          font-family: coolfont;
+        }
+
+        #textarea {
+          background-color: black;
+          width: 200px;
+          padding: 50px;
+          margin: auto;
+          border: solid;
+          border-color: red;
+        }
 
 
-#construction {
- float: right;
-
-}
-
-#header{
-  color: Blue;
-  text-align: center;
-  font-family: sans-serif;
-}
-</style>
+  </style>
 </head>
-<html>
+<body>
 
-<ul>
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="commentbox.html">Guestbook</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
-<br>
-<br>
-<h1 id="header">WhiskersLD's Blog</h1>
-<br>
+
+<h1 id="textdateheader" style="font-size: 50px;">TELLEX'S BLOG</h1>
+<br/>
+
+<h2 id="textdateheader">Saturday, September 12, 2020.</h2>
+<div id="textarea">
+  <h3 id="textblog">smoke</h3>
+  <p id="textblog">today i went outside with my family all day going to yard sales. the entire sky was orange and stung my eyes. the birds were screaming. the smoke was so thick that you could barely see the sun. i felt sick. its getting close to the 1st yr anniversary of my uncles death. i wish i could just go back to 2015</p>
+</div>
