--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <h1 id="textdateheader" style="font-size: 50px;">TELLEX'S BLOG</h1>
 <br/>
 
+<h2 id="textdateheader">Sunday, September 13, 2020.</h2>
+<div id="textarea">
+  <h3>
+</div>
+
+
+<br />
+
 <h2 id="textdateheader">Saturday, September 12, 2020.</h2>
 <div id="textarea">
   <h3 id="textblog">smoke</h3>
