--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 
 
-<h1 id="textdateheader" style="font-size: 50px;">TELLEX'S BLOG</h1>
+<h1 id="textdateheader" style="font-size: 50px;">T3LL3X'S BLOG</h1>
 <br/>
 
 <h2 id="textdateheader">Sunday, September 13, 2020.</h2>
