--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 <h2 id="textdateheader">Sunday, September 13, 2020.</h2>
 <div id="textarea">
-  <h3>
+  <h3 id="textblog">waste</h3>
+  <p id="textblog"> today i just stayed inside and did nothing. the smoke is even worse now. i opened the door slightly, and i felt suffocated like someone was covering my head with a plastic bag and smearing cig buts in my face. even though the conditions today, i still felt like a waste being inside and doing nothing. ive been wasting my life since early 2018. i havent talked to my irl friends in years. i feel isolated and alone.
 </div>
 
 
