--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <h1 id="textdateheader" style="font-size: 50px;">T3LL3X'S BLOG</h1>
 <br/>
 
+<h2 id="textdateheader">Monday, September 14, 2020.</h2>
+<div id="textarea">
+  <h3 id="textblog">...</h3>
+  <p id="textblog">  feel like im going to explode, the last few days ive been having gruesome nightmares of family members dying or me harming strangers.  my moms leaving for a day on wednesday. i dont want to be left alone with dad </p>
+</div>
+
+<br />
+
 <h2 id="textdateheader">Sunday, September 13, 2020.</h2>
 <div id="textarea">
   <h3 id="textblog">waste</h3>
