--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <h1 id="textdateheader" style="font-size: 50px;">T3LL3X'S BLOG</h1>
 <br/>
 
+<h2 id="textdateheader">Tuesday, September 15, 2020.</h2>
+<div id="textarea">
+  <h3 id="textblog">...</h3>
+  <p id="textblog">nearly had it i swear to god, if i have to hear one more word from that cunt. dad didnt give a shit he was laughing his ass off maybe ill ask mom if i can go with her tomorrow </p>
+</div>
+
+</br />
+
 <h2 id="textdateheader">Monday, September 14, 2020.</h2>
 <div id="textarea">
   <h3 id="textblog">...</h3>
