--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <h2 id="textdateheader">Tuesday, September 15, 2020.</h2>
 <div id="textarea">
-  <h3 id="textblog">...</h3>
+  <h3 id="textblog">i just wanna go on a walk into the river</h3>
   <p id="textblog">nearly had it i swear to god, if i have to hear one more word from that cunt. dad didnt give a shit he was laughing his ass off maybe ill ask mom if i can go with her tomorrow </p>
 </div>
 
