--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
 
 <h2 id="textdateheader">Tuesday, September 15, 2020.</h2>
 <div id="textarea">
-  <h3 id="textblog">i just wanna go on a walk into the river</h3>
-  <p id="textblog">nearly had it i swear to god, if i have to hear one more word from that cunt. dad didnt give a shit he was laughing his ass off maybe ill ask mom if i can go with her tomorrow </p>
+  <p id="textblog">nearly had it i swear to god, if i have to hear one more word from that fuckhead. dad didnt give a shit he was laughing his ass off maybe ill ask mom if i can go with her tomorrow </p>
 </div>
 
 </br />
 
 <h2 id="textdateheader">Monday, September 14, 2020.</h2>
 <div id="textarea">
-  <h3 id="textblog">...</h3>
   <p id="textblog">  feel like im going to explode, the last few days ive been having gruesome nightmares of family members dying or me harming strangers.  my moms leaving for a day on wednesday. i dont want to be left alone with dad </p>
 </div>
 
@@ -62,7 +60,6 @@
 
 <h2 id="textdateheader">Sunday, September 13, 2020.</h2>
 <div id="textarea">
-  <h3 id="textblog">waste</h3>
   <p id="textblog"> today i just stayed inside and did nothing. the smoke is even worse now. i opened the door slightly, and i felt suffocated like someone was covering my head with a plastic bag and smearing cig buts in my face. even though the conditions today, i still felt like a waste being inside and doing nothing. ive been wasting my life since early 2018. i havent talked to my irl friends in years. i feel isolated and alone.
 </div>
 
@@ -71,6 +68,5 @@
 
 <h2 id="textdateheader">Saturday, September 12, 2020.</h2>
 <div id="textarea">
-  <h3 id="textblog">smoke</h3>
   <p id="textblog">today i went outside with my family all day going to yard sales. the entire sky was orange and stung my eyes. the birds were screaming. the smoke was so thick that you could barely see the sun. i felt sick. its getting close to the 1st yr anniversary of my uncles death. i wish i could just go back to 2015</p>
 </div>
